# codelab-ai-service

./: .env.example  .gitignore  CHANGELOG.md  DATABASE_ARCHITECTURE_COMPARISON.md  DATABASE_CONFIGURATION.md  MULTI_AGENT_FINAL_REPORT.md  MULTI_AGENT_POC_BENCHMARK.md  MULTI_AGENT_POC_METRICS.md  MULTI_AGENT_POC_PLAN.md  MULTI_AGENT_POC_QUICKSTART.md  MULTI_AGENT_POC_RESULTS_TEMPLATE.md  POSTGRES_MIGRATION_SUMMARY.md  POSTGRES_QUICKSTART.md  README.md  README.md.backup  SWITCH_TO_POSTGRES.md  docker-compose.yml  litellm_config.yaml  poc_benchmark_tasks.yaml  pull_model_docker.sh  test_pydantic_serialization.py  test_websocket.py
agent-runtime/: .dockerignore  .env.example  .gitignore  AGENT_RUNTIME_ALGORITHM.md  ASYNC_DATABASE_MIGRATION.md  ASYNC_MIGRATION_SUMMARY.md  ASYNC_SESSION_MANAGER_REPLACEMENT_PLAN.md  CHANGELOG.md  CHANGELOG_DATABASE.md  CHANGELOG_HTTP_STREAMING.md  CHANGELOG_TOOL_USAGE_FIX.md  COEXISTENCE_GUIDE.md  COMPATIBILITY_LAYER_REFACTORING_PLAN.md  DATABASE_IMPROVEMENT_RECOMMENDATIONS.md  DATABASE_MIGRATION_GUIDE.md  DEPRECATED_CODE_REMOVAL.md  Dockerfile  ENDPOINTS_MIGRATION_ANALYSIS.md  FULL_MIGRATION_PLAN.md  FULL_MIGRATION_PLAN_UPDATED.md  MIGRATION_COMPLETE.md  MIGRATION_ROADMAP.md  MULTI_AGENT_IMPLEMENTATION.md  NEW_ARCHITECTURE_README.md  PERSISTENCE_SUBSCRIBER_ANALYSIS.md  PHASE2_MIGRATION_INSTRUCTIONS.md  PHASE4_COMPLETION_REPORT.md  PHASE4_FINAL_STEPS.md  PHASE4_INTEGRATION_GUIDE.md  PHASE4_LOOP_ISSUE_ANALYSIS.md  PHASE_3_COMPLETE.md  PHASE_3_RECOMMENDATIONS.md  PLANNING_IMPLEMENTATION_REPORT.md  PLANNING_SYSTEM_GUIDE.md  POC_METRICS_README.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_STAGE_1_COMPLETE.md  REFACTORING_STAGE_2_COMPLETE.md  REFACTORING_STAGE_3_COMPLETE.md  (+37 more)
agent-runtime/app/: main.py
agent-runtime/app/agents/: __init__.py  architect_agent.py  ask_agent.py  base_agent.py  coder_agent.py  debug_agent.py  orchestrator_agent.py  orchestrator_agent.py.backup  orchestrator_agent.py.bak  orchestrator_agent.py.bak2  universal_agent.py
agent-runtime/app/application/: __init__.py
agent-runtime/app/core/: config.py  dependencies.py  dependencies_llm.py  dependencies_new.py  dependencies_old.py
agent-runtime/app/events/: __init__.py  agent_events.py  approval_events.py  base_event.py  event_bus.py  event_types.py  llm_events.py  session_events.py  tool_events.py
agent-runtime/app/middleware/: internal_auth.py
agent-runtime/app/models/: __init__.py  agents.py  db_models.py  hitl_models.py  metrics.py  plan_models.py  schemas.py
agent-runtime/app/services/: __init__.py  agent_context.py  agent_context_async.py  agent_router.py  chat_service.py  database.py  hitl_manager.py  hitl_policy_service.py  llm_proxy_client.py  llm_stream_service.py  metrics_collector.py  multi_agent_orchestrator.py  orchestrator.py  plan_manager.py  retry_service.py  session_manager.py  session_manager_async.py  tool_call_handler.py  tool_manager.py  tool_parser.py  tool_registry.py
agent-runtime/data/: agent_runtime.db
agent-runtime/doc/: EVENT_DRIVEN_ARCHITECTURE.md  EVENT_DRIVEN_COVERAGE_ANALYSIS.md  EVENT_DRIVEN_FINAL_STATUS.md  EVENT_DRIVEN_IMPLEMENTATION_PHASE1.md  EVENT_DRIVEN_IMPLEMENTATION_PHASE2.md  EVENT_DRIVEN_IMPLEMENTATION_PHASE3.md  EVENT_DRIVEN_IMPLEMENTATION_PHASE4.md  EXECUTION_ENGINE_GUIDE.md  EXECUTION_LAYER_README.md  HITL_REJECTION_VIA_WEBSOCKET.md  IMPLEMENTATION_STATUS.md  LLM_METRICS_COMPLETION_REPORT.md  LLM_METRICS_IMPLEMENTATION.md  LLM_METRICS_QUICKSTART.md  MESSAGES_NOT_SAVED_ROOT_CAUSE.md  METRICS_COLLECTION_GUIDE.md  PLANNING_SYSTEM_QUICKSTART.md  PRODUCTION_LOGS_ANALYSIS.md  SESSION_AUDIT_REPORT.md  SESSION_METRICS_PROPOSAL.md  SSE_SESSION_CACHE_PROBLEM.md  SSE_TRANSACTION_IMPLEMENTATION_REPORT.md  SSE_UNIT_OF_WORK_IMPLEMENTATION.md  SSE_UOW_FIX_REPORT.md  SSE_UOW_LOGS_ANALYSIS.md  SSE_UOW_USAGE_ANALYSIS.md  UNIFIED_APPROVAL_SYSTEM.md
agent-runtime/scripts/: generate_metrics_report.py  run_poc_experiment.py  test_metrics.py
agent-runtime/tests/: conftest.py  test_application_layer.py  test_approval_manager.py  test_approval_manager_integration.py  test_domain_base.py  test_domain_entities.py  test_event_bus.py  test_event_driven_context.py  test_event_integration.py  test_execution_engine.py  test_fsm_option2_states.py  test_fsm_orchestrator.py  test_infrastructure_repositories.py  test_internal_auth_middleware.py  test_llm_response_processor.py  test_llm_stream_service.py  test_main.py  test_message_orchestration.py  test_models.py  test_multi_agent_system.py  test_plan_approval_integration.py  test_planning_system.py  test_resilience.py  test_retry_service.py  test_session_manager.py  test_stream_llm_response_handler.py  test_subtask_executor.py  test_task_classifier.py  test_tool_filter_service.py  test_tool_parser.py
gateway/: .env.example  CHANGELOG.md  CHANGELOG_HTTP_STREAMING.md  Dockerfile  GATEWAY_AUTO_SESSION_SUPPORT.md  README.md  pyproject.toml  test_auto_session.py
gateway/app/: main.py
gateway/app/core/: config.py  dependencies.py
gateway/app/middleware/: internal_auth.py  jwt_auth.py
gateway/doc/: IMPLEMENTATION_STATUS.md
gateway/tests/: README.md  test_agent_runtime_proxy.py  test_buffer.py  test_config.py  test_main.py  test_message_parser.py  test_middleware.py  test_proxy_endpoints_integration.py  test_sse_stream_handler.py  test_websocket_handler.py  test_websocket_integration.py
(+462 files in other folders)
