[project]
name = "codelab-agent-runtime"
version = "0.1.0"
description = "CodeLab Agent Runtime Service - Основная AI логика"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sergey Penkovsky", email = "sergey.penkovsky@gmail.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.1",
    "pydantic==2.5.1",
    "sse-starlette==1.6.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
