[project]
name = "codelab-gateway"
version = "0.1.0"
description = "CodeLab Gateway Service - WebSocket прокси между IDE и Agent"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sergey Penkovsky", email = "sergey.penkovsky@gmail.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "websockets==12.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.1",
    "pydantic==2.5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff",
    "ty"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]


[tool.ty]
src = "pyproject.toml"
out = "requirements.txt"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"